# localcache-rs

./: CHANGELOG.md  Cargo.toml  Makefile.toml  NOTICE  README.md  ROADMAP.md  TERMS_OF_USE.md
.github/: SECURITY.md
.github/workflows/: ci.yaml
cli/: Cargo.toml
cli/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md  api.md  architecture.md  async.md  builder.md  change_detection.md  changelog_summary.md  cli.md  cookbook.md  errors.md  features.md  getting_started.md  introduction.md  migration.md  portability.md  querying.md  roadmap.md  watching.md
examples/: connection_pool.rs  document_pipeline.rs  embedding_cache.rs  gen_compat_fixture.rs
rfcs/: 0001-recursive-directory-watching.md  0002-query-index-hints.md  0003-opentelemetry-spans.md  0004-shared-memory-db.md  0005-async-std-smol.md  README.md
rfcs/done/: 0001-recursive-directory-watching.md  0002-query-index-hints.md  0003-opentelemetry-spans.md  0004-shared-memory-db.md  0005-async-std-smol.md  0006-directory-scoped-query-predicates.md  0007-read-only-connection-pool.md  0008-compatibility-guarantees.md
src/: cache.rs  db.rs  detection.rs  error.rs  lib.rs  path.rs  pool.rs  read_pool.rs  serialization.rs  tests.rs
src/cache/: async_engine.rs  builder.rs  engine.rs  entry.rs  options.rs  query.rs  runtime.rs  watcher.rs
src/db/: repository.rs  schema.rs
src/detection/: hash.rs  metadata.rs  strategy.rs
tests/: builder_ops.rs  codec_lru.rs  compat.rs  core.rs  pool_observe.rs  portability.rs  query.rs  read_pool.rs  storage.rs  watching.rs
tests/common/: mod.rs
tests/fixtures/: README.md  compat-v0_18.sqlite3
