[workspace]
members  = [".", "cli"]
resolver = "2"

[package]
name        = "localcache"
version     = "0.13.0"
edition     = "2024"
rust-version = "1.85"
authors     = ["nabbisen"]
license     = "Apache-2.0"
description = "A Rust library for caching expensive computation results associated with local files"
repository  = "https://github.com/nabbisen/localcache-rs"
keywords    = ["cache", "local-file", "sqlite", "embedding", "memoize"]
categories  = ["caching", "filesystem"]
exclude     = ["benches/", "target/", ".github/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
async       = ["dep:tokio"]
compression = ["dep:zstd"]
json        = ["dep:serde_json"]
encryption  = ["dep:aes-gcm"]
## Enable `tracing` instrumentation on key cache operations.
tracing     = ["dep:tracing"]

[dependencies]
rusqlite   = { version = "0.32", features = ["bundled"] }
serde      = { version = "1",    features = ["derive"] }
bincode    = "1.3"
blake3     = "1"
thiserror  = "2"
base64     = "0.22"
tokio      = { version = "1",    features = ["rt"],     optional = true }
zstd       = { version = "0.13",                        optional = true }
serde_json = { version = "1",                           optional = true }
aes-gcm    = { version = "0.10",                        optional = true }
tracing    = { version = "0.1",                         optional = true }

[dev-dependencies]
tempfile  = "3"
tokio     = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name              = "cache_bench"
harness           = false
required-features = ["json"]
