[package]
name        = "localcache-cli"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
description = "CLI inspection and maintenance tool for localcache databases"

[[bin]]
name = "localcache"
path = "src/main.rs"

[dependencies]
localcache = { path = "..", features = ["compression", "json"] }
clap       = { workspace = true }
serde_json = { workspace = true }
